fix: fix hints delimiters and z-index for this one

--- a/src/pages/Hero/AbilitiesFrame/AbilitiesFrame.module.css
+++ b/src/pages/Hero/AbilitiesFrame/AbilitiesFrame.module.css
@@ -1,6 +1,6 @@
 .abilitiesFrame{
   position: relative;
-  z-index: 20;
+  z-index: 101;
   display: flex;
   flex-direction: column;
   align-items: center;
