--- a/src/pages/Hero/Hero.module.css
+++ b/src/pages/Hero/Hero.module.css
@@ -17,7 +17,6 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  z-index: 10;
 }
 .panel::before{
   content: "";
