--- a/src/pages/Hero/TalentsHint/TalentsHint.module.css
+++ b/src/pages/Hero/TalentsHint/TalentsHint.module.css
@@ -2,7 +2,6 @@
   position: absolute;
   left: -425px;
   top: -135px;
-  z-index: 100;
   border: 2px solid rgb(61, 61, 72);
   width: 420px;
   min-height: 10px;
